...
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="U1z-KB-5ah">
                    <rect key="frame" x="0.0" y="20" width="375" height="557"/>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                </tableView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U57-A2-mCN">
                    <rect key="frame" x="20" y="597" width="335" height="50"/>
                    <accessibility key="accessibilityConfiguration" identifier="continue"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="c5K-Fh-NT1"/>
                    </constraints>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="filled" title="Continue"/>
                    <connections>
...
